# referendum2030

./: .env.prod.example  .gitignore  README.md  compose.prod.yml  compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-backend.yml  pages.yml  smoke-prod.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml
apps/api/audit/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  views.py
apps/api/audit/migrations/: 0001_initial.py  0002_historicalauditevent.py  0003_alter_auditevent_options_and_more.py
apps/api/core/: exceptions.py  middleware.py  permissions.py  responses.py  throttling.py  utils.py
apps/api/core/management/commands/: seed_demo_all.py
apps/api/referendum2030/: api.py  asgi.py  urls.py  wsgi.py
apps/api/referendum2030/settings/: base.py  local.py  production.py
apps/api/referendums/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/api/referendums/management/commands/: seed_demo_referendum.py
apps/api/referendums/migrations/: 0001_initial.py  0002_historicaloption_historicalquestion_and_more.py  0003_alter_historicaloption_options_and_more.py
apps/api/tests/: test_api.py
apps/api/users/: admin.py  models.py
apps/api/users/management/commands/: seed_demo_admin.py
apps/api/votes/: admin.py  apps.py  models.py  security.py  selectors.py  serializers.py  services.py  signals.py  views.py
apps/api/votes/migrations/: 0001_initial.py  0002_historicalvote_historicalvotertoken.py  0003_alter_historicalvote_options_and_more.py
apps/web/: astro.config.mjs  package.json  playwright.config.ts  playwright.prod.config.ts
apps/web/e2e/: production-smoke.spec.ts  referendum2030.spec.ts
apps/web/public/: robots.txt  site.webmanifest
apps/web/src/: content.config.ts
apps/web/src/components/: Disclaimer.astro  (+10 more)
deploy/: backend.compose.yml
docs/: api_reference.md  architecture.md  cryptography_and_privacy.md  deployment_guide.md
docs/screenshots/qa/: QA_REPORT.md  _report.json  a11y_report.json
scripts/: smoke-prod.py  verify-openapi-contract.py  visual-qa-screenshots.ts
(+128 files in other folders)
